Admin/forms.begin

--- a/maths/templates/maths/main.html
+++ b/maths/templates/maths/main.html
@@ -10,6 +10,13 @@
        To jest część stała szablonu głównego
    </div>
    <div id="inner-content">
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+      {% endif %}
        {% block content %}
            To jest blok kodu. W innych szablonach możemy go nadpisać
        {% endblock %}
