--- a/maths/templates/maths/results.html
+++ b/maths/templates/maths/results.html
@@ -12,6 +12,6 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_table }}
-        <button type="submit">Submit</button>
+        <input type="submit" value="go">
     </form>
 {% endblock %}
