--- a/greetings/templates/greetings/welcome.html
+++ b/greetings/templates/greetings/welcome.html
@@ -1,6 +1,6 @@
-{% extends "maths/main.html" %}
+{% extends "main.html" %}
 
-{% block title %}Maths list{% endblock %}
+{% block title %}Welcome{% endblock %}
 
 {% block content %}
     <h1>Witam w aplikacji Django</h1>
