--- a/greetings/templates/greetings/aboutpage.html
+++ b/greetings/templates/greetings/aboutpage.html
@@ -1,6 +1,6 @@
-{% extends "maths/main.html" %}
+{% extends "main.html" %}
 
-{% block title %}Maths list{% endblock %}
+{% block title %}About Page{% endblock %}
 
 {% block breadcrumbs %}
     <ol class="breadcrumb">
