--- a/greetings/templates/greetings/contactpage.html
+++ b/greetings/templates/greetings/contactpage.html
@@ -1,6 +1,6 @@
-{% extends "maths/main.html" %}
+{% extends "main.html" %}
 
-{% block title %}Maths list{% endblock %}
+{% block title %}Contact Page{% endblock %}
 {% block breadcrumbs %}
     <ol class="breadcrumb">
         <li class="breadcrumb-item " >
