--- a/posts/templates/author_list.html
+++ b/posts/templates/author_list.html
@@ -1,5 +1,5 @@
 {% extends "main.html" %}
-
+{% load bootstrap4 %}
 {% block title %}Authors list{% endblock %}
 
 {% block breadcrumbs %}
@@ -40,13 +40,11 @@
         <div class="row justify-content-center">
           <div class="col-md-6">
             <h3>Add a new Author</h3>
-            <form action="" method="post">
-              {% csrf_token %}
-              <div class="form-group">
-                {{ form.as_p }}
-              </div>
-              <button type="submit" class="btn btn-primary">Add</button>
-            </form>
+                <form method="POST" enctype='multipart/form-data'>
+                    {% csrf_token %}
+                    {% bootstrap_form form  %}
+                    <input type="submit" value="Dodaj">
+                </form>
           </div>
         </div>
       </div>
