--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% load bootstrap4 %}
 
 {% block title %}Posts list{% endblock %}
 
@@ -41,14 +42,15 @@
     <div class="col-md-5">
         <div class="row justify-content-center">
           <div class="col-md-8">
-            <h3>Add a new Post</h3>
-            <form action="" method="post">
-              {% csrf_token %}
-              <div class="form-group">
-                {{ form.as_p }}
-              </div>
-              <button type="submit" class="btn btn-primary">Add</button>
-            </form>
+            {% if perms.posts.add_post %}
+                <h3>Add a new Post</h3>
+                <form method="POST" enctype='multipart/form-data'>
+                    {% csrf_token %}
+                    {% bootstrap_form form  %}
+                    <input type="submit" value="Dodaj">
+                </form>
+            {% else %}
+            {% endif %}
           </div>
         </div>
       </div>
