--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -33,6 +33,9 @@
                             <td><a href="{% url 'posts:details' p.id %}">{{ p.title }}</a></td>
                             <td>{{ p.author }}</td>
                             <td>{{ p.created }}</td>
+                            {% if perms.posts.change_post %}
+                            <td><a href="{% url 'posts:editing' p.id %}">Edit</a></td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                 </tbody>
@@ -41,7 +44,7 @@
     </div>
     <div class="col-md-5">
         <div class="row justify-content-center">
-          <div class="col-md-8">
+          <div class="col-md-7">
             {% if perms.posts.add_post %}
                 <h3>Add a new Post</h3>
                 <form method="POST" enctype='multipart/form-data'>
