--- a/templates/main.html
+++ b/templates/main.html
@@ -12,48 +12,60 @@
    {% bootstrap_javascript jquery='full' %}
 </head>
 <body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="{% url 'greetings:welcome' %}">Django Learning</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item {% if 'about' in request.get_full_path %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'greetings:about' %}">About</a>
-                </li>
-                <li class="nav-item {% if 'contact' in request.get_full_path %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'greetings:contact' %}">Contact</a>
-                </li>
-                <li class="nav-item {% if 'maths' in request.get_full_path %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'maths:list' %}">Maths</a>
-                </li>
-                <li class="nav-item {% if 'posts/list' in request.get_full_path %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'posts:list' %}">Posts</a>
-                </li>
-                <li class="nav-item {% if 'authors' in request.get_full_path %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'posts:a_list' %}">Authors</a>
-                </li>
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <span class="nav-link">{{ user.username }} |</span>
-                </li>
-                <li class="nav-item">
-                    <form id="logout-form" action="{% url 'logout' %}" method="post" class="d-inline">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-outline-dark nav-link">Logout</button>
-                    </form>
-                </li>
-                {% else %}
-                <li class="nav-item {% if 'login' in request.get_full_path %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-                </li>
-                {% endif %}
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'greetings:welcome' %}">Django Learning</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item {% if 'about' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'greetings:about' %}">About</a>
+                    </li>
+                    <li class="nav-item {% if 'contact' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'greetings:contact' %}">Contact</a>
+                    </li>
+                    <li class="nav-item {% if 'maths' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'maths:list' %}">Maths</a>
+                    </li>
+                    <li class="nav-item dropdown {% if 'posts' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Blog
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="{% url 'posts:list' %}">Posts</a>
+                          <a class="dropdown-item" href="{% url 'posts:a_list' %}">Authors</a>
+                        </div>
+                      </li>
+                    <li class="nav-item dropdown {% if 'books' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Library
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="{% url 'books:books_list' %}">Books</a>
+                          <a class="dropdown-item" href="{% url 'books:authors_list' %}">Authors</a>
+                        </div>
+                      </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link"  href="{% url 'books:borrow_list' %}">{{ user.username }} |</a>
+                    </li>
+                    <li class="nav-item">
+                        <form id="logout-form" action="{% url 'logout' %}" method="post" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-no-effect nav-link">Logout</button>
+                        </form>
+                    </li>
+                    {% else %}
+                    <li class="nav-item {% if 'login' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 {% block breadcrumbs %}
     <ol class="breadcrumb">
         <li class="breadcrumb-item {% if 'welcome' in request.get_full_path %}active{% endif %}" >
